# issuing_agent

./: .gitignore  CMakeLists.txt  README.md  collect-data.py  default.nix  fetchNixpkgs.nix  index.html  package.xml  release.nix  setup.py  virtualenv.nix
abi/: EnergyToken.json  EnergyTokenByzantium.json  EnergyTokenPetersburg.json  emitter.json
collector-agent/: CMakeLists.txt  README.md  default.nix  package.xml  result  setup.py
collector-agent/abi/: token.json
collector-agent/launch/: applicant.launch  collector.launch  trader.launch  worker.launch
collector-agent/scripts/: applicant_node  collector_node  trader_node  worker_node
contracts/: README.md  package-lock.json  package.json  truffle.js
contracts/contracts/: ConfirmValidator.sol  Emitter.sol  EnergyToken.sol  SolarToken.sol
contracts/migrations/: 2_contracts_deploy.js  2_solar_token.js
dapp/: package.json
dapp/public/: index.html
dapp/src/: config.js  main.js
examples/: README.md  create_objective.py  data.json  nu_dao_data.json  objective.bag  result.bag  test_demand.yaml  test_offer.yaml
issuing-service-agent/: CMakeLists.txt
issuing-service-agent/launch/: issuer.launch
issuing-service-agent/scripts/: issuer_node
js/: app.8d0180b6.js  app.8d0180b6.js.map  chunk-vendors.84b23b02.js
launch/: issuer.launch
renewable-enegry-agent/: CMakeLists.txt  README.md  default.nix  package.xml  result  setup.py
renewable-enegry-agent/launch/: trader.launch
renewable-enegry-agent/scripts/: trader_node
robonomics/: model.txt  test_validator.py
scripts/: checker_node  issuer_node
(+5 files in other folders)
